--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
         <li class="nav-item">
           <a class="nav-link active" href="#">Matches</a>
         </li>
@@ -13,9 +13,18 @@
         </li>
       </ul>
 
-      <!-- Login -->
-      <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+      <!-- DropDown -->
+      <div class="dropdown" *ngIf="loggedIn" dropdown>
+        <a class="dropdown-toggle text-light" style="text-decoration: none;" dropdownToggle>Welcome User</a>
+        <div class="dropdown-menu" *dropdownMenu>
+          <a class="dropdown-item">Edit Profile</a>
+          <a class="dropdown-item" (click)="logout()">Logout</a>
+        </div>
+      </div>
+      <!-- /DropDown -->
 
+      <!-- Login -->
+      <form #loginForm="ngForm" *ngIf="!loggedIn" class="d-flex" (ngSubmit)="login()" autocomplete="off">
         <input
           name="username"
           [(ngModel)]="model.username"
@@ -23,12 +32,11 @@
           type="text"
           placeholder="UserName">
         <input
-            name="password"
-            [(ngModel)]="model.password"
-            class="form-control me-2"
-            type="password"
-            placeholder="Password">
-
+          name="password"
+          [(ngModel)]="model.password"
+          class="form-control me-2"
+          type="password"
+          placeholder="Password">
         <button class="btn btn-outline-success" type="submit">Login</button>
       </form>
       <!-- /Login -->
