--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -4,6 +4,16 @@
   <div class="mb-3">
     <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="username">
   </div>
+
+  <!-- parent component -->
+  <div class="mb-3">
+    <label for="">Choose one</label>
+    <select class="form-control">
+      <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">{{user.userName}}</option>
+    </select>
+  </div>
+  <!-- /parent component -->
+
   <div class="mb-3">
     <input type="password" class="form-control" name="password" [(ngModel)]="model.password" placeholder="password">
   </div>
