--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -19,6 +19,6 @@
   </div>
   <div class="text-center">
     <button class="btn btn-success me-2" type="submit">register</button>
-    <button class="btn btn-defult" type="button" (click)="cancel()">register</button>
+    <button class="btn btn-defult" type="button" (click)="cancel()">cancel</button>
   </div>
 </form>
