--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+    <ng-container *ngIf="accountService.currentUser$ | async">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
           <a class="nav-link active" routerLink="/members" routerLinkActive="active">Matches</a>
@@ -12,6 +13,7 @@
           <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
         </li>
       </ul>
+    </ng-container>
 
       <!-- DropDown -->
       <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
