--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,8 +16,8 @@
     </ng-container>
 
       <!-- DropDown -->
-      <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-        <a class="dropdown-toggle text-light" style="text-decoration: none;" dropdownToggle>Welcome User</a>
+      <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+        <a class="dropdown-toggle text-light" style="text-decoration: none;" dropdownToggle>Welcome {{user.username | titlecase}}</a>
         <div class="dropdown-menu" *dropdownMenu>
           <a class="dropdown-item">Edit Profile</a>
           <a class="dropdown-item" (click)="logout()">Logout</a>
@@ -39,7 +39,7 @@
           class="form-control me-2"
           type="password"
           placeholder="Password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
       <!-- /Login -->
     </div>
