--- a/client/src/app/errors/test-error/test-error.component.html
+++ b/client/src/app/errors/test-error/test-error.component.html
@@ -4,4 +4,10 @@
   <button class="btn btn-outline-primary me-3" (click)="get404Error()">400 Not Found Error</button>
   <button class="btn btn-outline-primary me-3" (click)="get500Error()">400 Server Error</button>
   <button class="btn btn-outline-primary me-3" (click)="get400ValidationError()">400 Validation Error</button>
+
+  <div class="row mt-4" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger" >
+      <li *ngFor="let error of validationErrors">{{error}}</li>
+    </ul>
+  </div>
 </ng-container>
